--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,5 +2,6 @@ cmake_minimum_required(VERSION 3.19)
 project(lighten_darken)
 
 set(CMAKE_CXX_STANDARD 14)
+include_directories(.)
 
 add_executable(lighten_darken main.cpp)
